cmake_minimum_required(VERSION 3.6)
project(Chapter11)

set(CMAKE_C_STANDARD 99)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(SOURCE_FILES main.c)
add_executable(main main.c)
add_executable(test_string test_string.c)
target_link_libraries(main m)
add_executable(graphics_test graphics.c)
add_executable(string String_test.c)
add_executable(string_sort string_sort.c)
add_executable(sort_string sort_string.c)
add_executable(te te.c)
add_executable(test_error test_error.c)
add_executable(Examtest Exam_test.c)
add_executable(pointers pointer.c)
