cmake_minimum_required(VERSION 3.7)
project(Chapter17)

set(CMAKE_C_STANDARD 99)

set(SOURCE_FILES main.c)
set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
#add_executable(Chapter17 ${SOURCE_FILES})
add_executable(main main.c)
add_executable(TestLinkedList  TestLinkedList.c LinkedList.c)
add_executable(example01 example01.c)
add_executable(testing test.c )
add_executable(basic00 basic00.c)
add_executable(film03 example02.c)
add_executable(TheList example02.c list.c)
add_executable(CircularQueue circular_queue.c)
add_executable(TestQueue use_queue.c queue.c)
add_executable(TestMail mail.c queue.c)
add_executable(TestTree Tree.c)
add_executable(petclub petclub.c Tree.c)
add_executable(problem04 mail_Problem04.c queue.c)
add_executable(TestStack problem05.c array_stack.c )
add_executable(problem07 problem07.c Tree_problem07.c)
add_executable(program06 program06.c)
add_executable(TestDList DoubleLinkedList.c)