cmake_minimum_required(VERSION 3.7)
project(Chapters_15_17)

set(CMAKE_C_STANDARD 99)

set(SOURCE_FILES main.c)
add_executable(bitshift bitshift.c)
add_executable(int_binary int_binary.c)
add_executable(program1 program01.c)
add_executable(program2 program02.c)
add_executable(bit_position bit_position.c)
add_executable(program6 program06.c)
add_executable(preprocessor preprocessor.c)
add_executable(test_link test_linking.c)
add_executable(example01 rect_pol.c)
target_link_libraries(example01 m)
add_executable(example02 example02.c)
target_link_libraries(example02 m)
add_executable(example03 example03.c)
add_executable(check_memcpy_and_memove_overriding memcpy_testing.c)
add_executable(example04 varable_args_example.c)
add_executable(example05 variadic_macros.c)
add_executable(test_macro testmacro.c)
add_executable(test_generic_selection test_generic_selection.c)
add_executable(test_assertion test_assert.c)
add_executable(example06 mems.c)

add_executable(program101 program101.c)
add_executable(program102 program102.c)
add_executable(program103 program103.c)
add_executable(program104 program104.c)
add_executable(program105 program105.c)
add_executable(program107 program107.c)
target_link_libraries(program103 m)
add_executable(wrong wrong.c)
target_link_libraries(wrong m)